:recycle: - move routes provider to core context

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
 
     <body class="flex flex-col h-screen">
-        <div id="root" class="flex flex-col"></div>
+        <div id="root" class="flex flex-col flex-grow"></div>
 
         <script type="module" src="/src/main.tsx"></script>
     </body>
