--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
     <head>
         <meta charset="UTF-8" />
 
         <title>Vite PWA Template</title>
+        <meta name="author" content="Steven Bustillo" />
         <meta name="description" content="Vite + React + TypeScript + Tailwind PWA Template" />
 
         <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -19,9 +20,18 @@
         <meta name="msapplication-TileColor" content="#da532c" />
 
         <meta name="theme-color" content="#ffffff" />
+
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com/" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
     </head>
 
-    <body class="flex flex-col h-screen">
+    <body class="flex flex-col h-screen font-main">
         <div id="root" class="flex flex-col flex-grow"></div>
 
         <script type="module" src="/src/main.tsx"></script>
